# myChessEngine

./: .clang-format  .gitignore  CMakeLists.txt  Iterative-deepening-minimax-alphabeta_pruning.h  UCI-alpha-beta-minmax-engine.cc  UCI-iterative-deepening-engine.cc  bit-board.h  bitboard_tests.cc  board.h  board_tests.cc  helper.cc  m  main.cc  minmax-alphabeta_pruning.h  tests.cc
